Prevent threading problem when searching while in merged view

BUG: 266421